--- a/src/styles/Landing.module.scss
+++ b/src/styles/Landing.module.scss
@@ -42,11 +42,12 @@
 
       .pre_header {
         color: #C0345E;
-        // opacity: 75%;
+        opacity: 75%;
         font-weight: 600;
         text-transform: uppercase;   
         font-size: 16px;
-        z-index: -1;
+        z-index: 1;
+        position: relative;
 
         @media (max-width: 500px) {
           font-size: 12px;
