--- a/src/styles/Nav.module.scss
+++ b/src/styles/Nav.module.scss
@@ -8,6 +8,7 @@ nav {
   opacity: 1;
   visibility: visible;
   transition: all .5s ease;
+  z-index: 10;
 
   &.hidden {
     opacity: 0;
@@ -69,6 +70,15 @@ nav {
     justify-content: space-evenly;
     cursor: pointer;
     z-index: 25;
+    transition: all .75s ease;
+
+    &.open {
+      margin: 0 2.5rem 0 auto;
+
+      @media (max-width: 500px) {
+        margin: 0 1.5rem 0 auto;
+      }
+    }
 
     @media (min-width: 1050px) {
       display: none;
@@ -148,10 +158,10 @@ nav {
       font-size: 21px;
       line-height: 37.8px;
       color: black;
-      margin: 1rem 20% 1rem 0;
+      margin: 1rem 2.5rem 1rem 0;
 
       @media (max-width: 500px) {
-        margin: 1rem 7.5% 1rem 0;
+        margin: 1rem 1.5rem 1rem 0;
       }
     }
 
